--- a/src/components/doooly/my_order_detail/detail_header/detail_header.scss
+++ b/src/components/doooly/my_order_detail/detail_header/detail_header.scss
@@ -22,6 +22,21 @@
 .header_msg .msg_title {
   margin-bottom: 0.3rem;
   font-size: 0.3rem;
+  position: relative;
+}
+.recycling{
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: .28rem;
+  color: rgba(255,16,35,1);
+  width: 1.5rem;
+  height: .4rem;
+  text-align: center;
+  border-radius: 0.5rem;
+  border: 1px solid rgba(255,16,35,1);
+
+  display: inline-block;
 }
 .header_msg .msg_count {
   margin-bottom: 0.2rem;
