--- a/src/components/doooly/my_order_detail/detail_header/detail_header.scss
+++ b/src/components/doooly/my_order_detail/detail_header/detail_header.scss
@@ -23,6 +23,7 @@
   margin-bottom: 0.3rem;
   font-size: 0.3rem;
   position: relative;
+  display: flex;
 }
 .recycling{
   position: absolute;
@@ -30,8 +31,7 @@
   right: 0;
   font-size: .28rem;
   color: rgba(255,16,35,1);
-  width: 1.5rem;
-  height: .4rem;
+  padding: .02rem .2rem;
   text-align: center;
   border-radius: 0.5rem;
   border: 1px solid rgba(255,16,35,1);
