--- a/src/components/doooly/confirm_order/confirm_order.scss
+++ b/src/components/doooly/confirm_order/confirm_order.scss
@@ -499,12 +499,19 @@ footer .click_btn{
       width: 6.18rem;
       height: .87rem;
       font-size: .32rem;
-      background:linear-gradient(90deg,rgba(243,147,44,1) 0%,rgba(234,94,41,1) 100%);
-      border-radius: .44rem;
       margin: 0 auto;
       text-align: center;
       color: #fff;
       line-height: .87rem;
+      button{
+        border: 0;
+        width: 100%;
+        background:linear-gradient(90deg,rgba(243,147,44,1) 0%,rgba(234,94,41,1) 100%);
+        border-radius: .44rem;
+      }
+      button:focus{
+        outline: none;
+      }
     }
   }
 }
