修改日期显示后3天&输入框

--- a/src/components/doooly/v3/pages/order-detail-activity/style.scss
+++ b/src/components/doooly/v3/pages/order-detail-activity/style.scss
@@ -29,3 +29,11 @@
 .mc-head-box>div:last-child {
   color: #ff1023;
 }
+
+.holiday {
+  background-color: rgba(25, 47, 89, 0.1);
+}
+
+.mc-body .mc-today-element .calendar-date {
+  background: #fff;
+}
